Add support for Judy, albeit not currently working on my machine.