@@ -34,6 +34,28 @@
               </outputFormats>
           </configuration>
       </plugin>
+      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.7</version>
+        <configuration>
+          <target>
+            <java dir="judy" jar="judy/judy-2.1.0.jar" fork="true">
+              <jvmarg value="-XX:MaxPermSize=2048m"/>
+              <jvmarg value="-Xmx2048m"/>
+              <jvmarg value="-Xms2048m"/>
+              <jvmarg value="-Xmn512m"/>
+              <jvmarg value="-Xss512k"/>
+              <jvmarg value="-XX:+UseG1GC"/>
+              <arg value="-w ${project.build.directory}"/>
+              <arg value="-c classes"/>
+              <arg value="-t test-classes"/>
+            </java>
+          </target>
+        </configuration>
+      </plugin>
+      
     </plugins>
   </build>
 </project>
